Fixed a problem with images size
There was previously a problem with the API sending images back that were a different resolution than the others causing it to make the page look weird

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .coinIcon img {
-  margin-bottom: 20px;
+  margin-bottom: 20px;,
+  width: 64px,
+  height: 50px 
 }
 
 .cData {
